@@ -3,8 +3,7 @@
 INCLUDES = \
 	-DPROCMAN_DATADIR=\"$(datadir)/procman/\" \
 	-DDATADIR=\""$(datadir)"\" \
-	@PROCMAN_CFLAGS@ -DGTK_DISABLE_DEPRECATED=1 \
-	-DGNOME_DISABLE_DEPRECATED
+	@PROCMAN_CFLAGS@ 
 
 bin_PROGRAMS = gnome-system-monitor
 
