@@ -1,3 +1,8 @@
+2003-11-22  Kevin Vandersloot
+
+	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
+	Kiran Kumar Immidi. Fixes bug #126923
+
 2003-05-21  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: Fix crash if uid is not correct. Fixes bug #109134
